--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,7 @@
         <activity android:name=".AddEvent" />
         <activity android:name=".EventDetails" />
         <activity android:name=".AddEventDetails" />
-<<<<<<< HEAD
-        <activity android:name=".SearchActivity" />
-        <activity android:name=".EditEventDetails"></activity>
-=======
+        <activity android:name=".EditEventDetails" />
         <activity android:name=".SearchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
@@ -34,7 +31,6 @@
         <meta-data
             android:name="android.app.default_searchable"
             android:value=".SearchActivity" />
->>>>>>> 514cc1e45b23842d5b869a0ba35b288fa9b97433
     </application>
 
 </manifest>
