--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,13 +24,17 @@
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
-            <meta-data android:name="android.app.searchable"
+
+            <meta-data
+                android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
 
         <meta-data
             android:name="android.app.default_searchable"
             android:value=".SearchActivity" />
+
+        <activity android:name=".EditEvent"></activity>
     </application>
 
 </manifest>
